crates/gitat-core/src/snapshots/gitat_core__diff__tests__snapshot_deleted_file_diff.snap
---
source: crates/gitat-core/src/diff.rs
assertion_line: 320
expression: result
---
[
    DiffFile {
        old_path: "old.rs",
        new_path: "/dev/null",
        hunks: [
            DiffHunk {
                old_start: 1,
                old_count: 2,
                new_start: 0,
                new_count: 0,
                lines: [
                    DiffLine {
                        kind: Removed,
                        content: "fn deprecated() {}",
                        old_line_no: Some(
                            1,
                        ),
                        new_line_no: None,
                    },
                    DiffLine {
                        kind: Removed,
                        content: "fn remove_me() {}",
                        old_line_no: Some(
                            2,
                        ),
                        new_line_no: None,
                    },
                ],
            },
        ],
    },
]
