crates/gitat-core/src/snapshots/gitat_core__diff__tests__snapshot_multiple_files_diff.snap
---
source: crates/gitat-core/src/diff.rs
assertion_line: 342
expression: result
---
[
    DiffFile {
        old_path: "a.rs",
        new_path: "a.rs",
        hunks: [
            DiffHunk {
                old_start: 1,
                old_count: 2,
                new_start: 1,
                new_count: 2,
                lines: [
                    DiffLine {
                        kind: Context,
                        content: "fn a() {",
                        old_line_no: Some(
                            1,
                        ),
                        new_line_no: Some(
                            1,
                        ),
                    },
                    DiffLine {
                        kind: Removed,
                        content: "    old_a();",
                        old_line_no: Some(
                            2,
                        ),
                        new_line_no: None,
                    },
                    DiffLine {
                        kind: Added,
                        content: "    new_a();",
                        old_line_no: None,
                        new_line_no: Some(
                            2,
                        ),
                    },
                    DiffLine {
                        kind: Context,
                        content: "}",
                        old_line_no: Some(
                            3,
                        ),
                        new_line_no: Some(
                            3,
                        ),
                    },
                ],
            },
        ],
    },
    DiffFile {
        old_path: "b.rs",
        new_path: "b.rs",
        hunks: [
            DiffHunk {
                old_start: 1,
                old_count: 1,
                new_start: 1,
                new_count: 2,
                lines: [
                    DiffLine {
                        kind: Context,
                        content: "fn b() {}",
                        old_line_no: Some(
                            1,
                        ),
                        new_line_no: Some(
                            1,
                        ),
                    },
                    DiffLine {
                        kind: Added,
                        content: "fn b2() {}",
                        old_line_no: None,
                        new_line_no: Some(
                            2,
                        ),
                    },
                ],
            },
        ],
    },
]
