crates/gitat-core/src/snapshots/gitat_core__diff__tests__snapshot_multiple_hunks_diff.snap
---
source: crates/gitat-core/src/diff.rs
assertion_line: 363
expression: result
---
[
    DiffFile {
        old_path: "lib.rs",
        new_path: "lib.rs",
        hunks: [
            DiffHunk {
                old_start: 1,
                old_count: 3,
                new_start: 1,
                new_count: 3,
                lines: [
                    DiffLine {
                        kind: Context,
                        content: "fn first() {",
                        old_line_no: Some(
                            1,
                        ),
                        new_line_no: Some(
                            1,
                        ),
                    },
                    DiffLine {
                        kind: Removed,
                        content: "    old1();",
                        old_line_no: Some(
                            2,
                        ),
                        new_line_no: None,
                    },
                    DiffLine {
                        kind: Added,
                        content: "    new1();",
                        old_line_no: None,
                        new_line_no: Some(
                            2,
                        ),
                    },
                    DiffLine {
                        kind: Context,
                        content: "}",
                        old_line_no: Some(
                            3,
                        ),
                        new_line_no: Some(
                            3,
                        ),
                    },
                ],
            },
            DiffHunk {
                old_start: 10,
                old_count: 3,
                new_start: 10,
                new_count: 3,
                lines: [
                    DiffLine {
                        kind: Context,
                        content: "fn second() {",
                        old_line_no: Some(
                            10,
                        ),
                        new_line_no: Some(
                            10,
                        ),
                    },
                    DiffLine {
                        kind: Removed,
                        content: "    old2();",
                        old_line_no: Some(
                            11,
                        ),
                        new_line_no: None,
                    },
                    DiffLine {
                        kind: Added,
                        content: "    new2();",
                        old_line_no: None,
                        new_line_no: Some(
                            11,
                        ),
                    },
                    DiffLine {
                        kind: Context,
                        content: "}",
                        old_line_no: Some(
                            12,
                        ),
                        new_line_no: Some(
                            12,
                        ),
                    },
                ],
            },
        ],
    },
]
