crates/gitat-core/src/snapshots/gitat_core__diff__tests__snapshot_new_file_diff.snap
---
source: crates/gitat-core/src/diff.rs
assertion_line: 305
expression: result
---
[
    DiffFile {
        old_path: "/dev/null",
        new_path: "new.rs",
        hunks: [
            DiffHunk {
                old_start: 0,
                old_count: 0,
                new_start: 1,
                new_count: 3,
                lines: [
                    DiffLine {
                        kind: Added,
                        content: "use std::io;",
                        old_line_no: None,
                        new_line_no: Some(
                            1,
                        ),
                    },
                    DiffLine {
                        kind: Added,
                        content: "fn hello() {}",
                        old_line_no: None,
                        new_line_no: Some(
                            2,
                        ),
                    },
                    DiffLine {
                        kind: Added,
                        content: "fn world() {}",
                        old_line_no: None,
                        new_line_no: Some(
                            3,
                        ),
                    },
                ],
            },
        ],
    },
]
