crates/gitat-core/src/snapshots/gitat_core__diff__tests__snapshot_single_file_diff.snap
---
source: crates/gitat-core/src/diff.rs
assertion_line: 289
expression: result
---
[
    DiffFile {
        old_path: "src/main.rs",
        new_path: "src/main.rs",
        hunks: [
            DiffHunk {
                old_start: 1,
                old_count: 3,
                new_start: 1,
                new_count: 4,
                lines: [
                    DiffLine {
                        kind: Context,
                        content: "fn main() {",
                        old_line_no: Some(
                            1,
                        ),
                        new_line_no: Some(
                            1,
                        ),
                    },
                    DiffLine {
                        kind: Removed,
                        content: "    println!(\"hello\");",
                        old_line_no: Some(
                            2,
                        ),
                        new_line_no: None,
                    },
                    DiffLine {
                        kind: Added,
                        content: "    let msg = \"hello\";",
                        old_line_no: None,
                        new_line_no: Some(
                            2,
                        ),
                    },
                    DiffLine {
                        kind: Added,
                        content: "    println!(\"{msg}\");",
                        old_line_no: None,
                        new_line_no: Some(
                            3,
                        ),
                    },
                    DiffLine {
                        kind: Context,
                        content: "}",
                        old_line_no: Some(
                            3,
                        ),
                        new_line_no: Some(
                            4,
                        ),
                    },
                ],
            },
        ],
    },
]
